testsuite/poke.pkl/attr-diag-5.pk
/* { dg-do compile } */

var a =
  [1,2,3]'elem (
    "foo" + "bar" /* { dg-error "invalid argument.*\n.*expected integral" } */
    );
